# 3SE26-

./: .gitignore  README.md
.omo/notepads/2026-07-18-wsl-local-three-node-closed-loop/: learnings.md
.omo/run-continuation/: ses_07c8c2f1effexIuEjk9k3Yle6F.json  ses_07c8c5844ffe0RKckmagrxC29U.json  ses_07c90a767ffe2YEVNXSJP229sU.json  ses_07c90dbdaffeCGzibMaLhc1XYK.json  ses_07c90f340ffeuHmJeQKZHWPy3B.json  ses_07c92ba4affeyHAmw5nnAamk9N.json  ses_07c92d2b8ffeyHiqZ2nwd1XAoJ.json  ses_07c92e30affe3I1nzBrTsw98pD.json  ses_07c92f57cffezN4OPedVwDYY9V.json  ses_07c96b85effeYBChA2yURA6nW9.json  ses_07c9720a2ffen5xW8RASPLv2r8.json  ses_07c98bcd2ffez9iOnNs8cjyvbJ.json  ses_07c98deb6ffems3XtQDACk4rA6.json  ses_07c98fef8ffePOYWA9Vgp8FGUR.json  ses_07c991606ffeRE9Z5ic5jkfP2p.json  ses_07c99c74effe02ujGru87kFhU9.json  ses_07c99dbeaffe6v43PHD5SARFQj.json  ses_07c99ed3fffe02zmGflSXDIMT2.json  ses_07c9a0744ffeEEGkxc37SM9DXa.json  ses_07ca25235ffeJqwRx1ZJ6SaShe.json  ses_07ca468f7ffeu0s4YU7lu3vSKO.json  ses_07ca53e70ffel4AsT4zKUe5EC9.json  ses_07ca6c61fffegKsLpypR2ose5T.json  ses_07ca7d873ffehrfnI9QUv03lP3.json  ses_07ca8b703ffeCrf4m7qZ3715A5.json  ses_07ca9a077ffeBRYlpOMA4u6Vce.json  ses_07cab2b7bffe2P1NpZLjo1yx1m.json  ses_07cac7300ffe09dn8Px5EJdtUN.json  ses_07cbeb037ffeKNA5ThKXzVqVUV.json  ses_07cbed6e9ffeLuCFh7HzN6Sn7R.json  ses_07cbefe97ffe17A4bdkYTahQ05.json  ses_07cc3a235ffejyYyPyUCIW0KRb.json  ses_07cc3cd3effemeI60CblyykFbD.json  ses_07cc3fe6effenRE6mGDaTi1SrN.json  ses_07cc434b7ffeLuwpZnV51mPS5C.json  ses_07cc45cd0ffePkZvNnpLXd62c9.json  ses_07d3f1cf3ffeU0tUvEXguYrIQp.json  ses_07d3f6e5dffeIH5wkTdUR6OU6K.json  ses_07d3f9ddbffeiD8RJegbWHzYun.json  ses_07d3fbb82ffewmItwWAr4Vta0b.json  (+22 more)
docs/: radar_source_baseline.md  rf_auto_scan_architecture.md  rf_auto_scan_requirements.md  rf_hardware_acceptance_zh.md  sdr_receiver_python_wrapper_architecture.md  sdr_receiver_python_wrapper_requirements.md  sdr_receiver_python_wrapper_requirements_20260520_update.md  sdr_receiver_ros2_interface_contract.md
docs/superpowers/plans/: 2026-07-11-common-receiver-foundation.md  2026-07-11-radar-context-integration.md  2026-07-11-upstream-decoder-and-validation.md  2026-07-17-open-source-replacement-baseline.md  2026-07-18-wsl-local-three-node-closed-loop.md
docs/superpowers/specs/: 2026-07-10-sdr-receiver-architecture-design.md  2026-07-10-sdr-receiver-requirements.md  2026-07-17-recording-evidence-manifest.md  2026-07-17-referee-protocol-mapping.md  2026-07-17-three-node-automated-integration-design.md  2026-07-18-wsl-local-three-node-closed-loop-design.md
sdr_receiver/: CMakeLists.txt  DEPLOY_UBUNTU22_COMPETITION.md  README.md  package.xml  调试模式与比赛模式操作手册.md  调试部署说明_Ubuntu22_Debug模式.md  远程SSH备份与联调方案.md  部署说明_Ubuntu22_比赛主机.md
sdr_receiver/config/sdr_profiles/: competition_profiles.yaml
sdr_receiver/include/sdr_receiver/: bit_utils.hpp  calibration.hpp  config.hpp  crc.hpp  demodulator.hpp  dsp.hpp  keyboard.hpp  pluto_sdr_device.hpp  profile_manager.hpp  radar_wireless_data.hpp  receiver_app.hpp  sdr_controller.hpp  terminal_ui.hpp  types.hpp
sdr_receiver/msg/: JamCode.msg  RadarContext.msg  RadarWirelessBuff.msg  RadarWirelessFrame.msg  RadarWirelessGoldOccupation.msg  RadarWirelessHp.msg  RadarWirelessKey.msg  RadarWirelessPosition.msg  RadarWirelessProjectile.msg
sdr_receiver/src/: bit_utils.cpp  calibration.cpp  config.cpp  crc.cpp  demodulator.cpp  dsp.cpp  keyboard.cpp  main.cpp  mock_jam_code_subscriber.cpp  mock_radar_context_publisher.cpp  mock_raw_frame_subscriber.cpp  pluto_sdr_device.cpp  profile_manager.cpp  radar_wireless_data.cpp  receiver_app.cpp  sdr_controller.cpp  sdr_receiver_node.cpp  terminal_ui.cpp  types.cpp
sdr_receiver_py_wrapper/: MANIFEST.in  README.md  package.xml  requirements.txt  setup.cfg  setup.py
sdr_receiver_py_wrapper/config/: competition_receiver.yaml  debug_receiver.yaml
sdr_receiver_py_wrapper/docs/: ADAPTIVE_PROFILE_SWEEP.md  DEPLOY_UBUNTU22_PY_WRAPPER.md  DEPLOY_WINDOWS_PY_WRAPPER.md  HANDOFF_WEAK_INFO_RX_20260514.md  NEXT_DEBUG_CONTEXT_INFO_RX.md  NEXT_DEBUG_PROMPT.md  NEXT_PROMPT_WEAK_INFO_RX_20260514.md  RADAR_TEAMMATE_UBUNTU22_COMM_TEST.md  RF_IQ_DIFF_CAPTURE.md  WEAK_INFO_PROBE.md
sdr_receiver_py_wrapper/fixtures/: manifest.json
sdr_receiver_py_wrapper/launch/: competition_receiver.launch.py  debug_receiver.launch.py  iq_replay_closed_loop.launch.py  iq_replay_jam_code.launch.py  iq_replay_receiver.launch.py
sdr_receiver_py_wrapper/scripts/: run_rf_bench.sh  start_competition_bo3.sh  start_iq_closed_loop_smoke.sh  start_iq_jam_code_replay.sh  start_iq_replay_receiver.sh
sdr_receiver_py_wrapper/sdr_receiver_py_wrapper/: __init__.py  acquisition.py  adaptive_profile_sweep.py  command_validator.py  competition_controller.py  context_arbiter.py  decoder_api.py  decoder_benchmark.py  device_session.py  direct_original_receiver.py  fixture_manifest.py  iq_file_source.py  mock_radar_context_publisher.py  models.py  offline_smoke_test.py  original_receiver_adapter.py  patches.py  profile_import.py  receiver_node.py  rf_iq_diff_capture.py  rf_power_scan.py  rf_safety.py  structured_recorder.py  topic_monitor.py  upstream_decoder.py  v67_decoder.py  weak_info_probe.py  wrapper_iq_replay.py
sdr_receiver_py_wrapper/test/: test_acquisition.py  test_combat_radar_upstream_boundary.py  test_command_validator.py  test_competition_controller.py  test_context_arbiter.py  test_decoder_api.py  test_decoder_benchmark.py  test_device_session.py  test_fixture_manifest.py  test_iq_file_source.py  test_profile_import.py  test_radar_context_publisher_source.py  test_radar_source_baseline.py  test_receiver_pipeline.py  test_rf_safety.py  test_structured_recorder.py  test_upstream_decoder.py  test_v67_decoder.py
src/radar_referee/: CMakeLists.txt  package.xml
src/radar_referee/include/robot_referee/: CRC.hpp  RefereeControl.hpp  RefereeProtocol.hpp  SendReceive.hpp  log_sys.h
src/radar_referee/launch/: radar.launch.py
src/radar_referee/src/: CRC.cpp  RefereeControl.cpp  SendReceive.cpp  log_sys.cpp  node_main.cpp
(+4 files in other folders)
