<?xml version="1.0"?>
<package format="3">
  <name>sdr_receiver_py_wrapper</name>
  <version>0.1.0</version>
  <description>ROS2 Python wrapper and monkey-patch adapter for the validated SDR receiver v67 script.</description>
  <maintainer email="sdr-team@example.com">SDR Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sdr_receiver</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
